Legacy launcher implemented Cache purging implemented